# src/main/java/se/sundsvall/document/api/model/PrincipalType.java
@@ -1,0 +1,6 @@
+package se.sundsvall.document.api.model;
+
+public enum PrincipalType {
+	USER,
+	GROUP
+}
